@@ -43,6 +43,13 @@ abstract class TodoyuBaseObject implements ArrayAccess, Dwoo_IDataProvider {
 	 */
 	protected $cache = array();
 
+	/**
+	 * Table of the record
+	 *
+	 * @var	String
+	 */
+	protected $table;
+
 
 
 
@@ -54,6 +61,7 @@ abstract class TodoyuBaseObject implements ArrayAccess, Dwoo_IDataProvider {
 	 */
 	public function __construct($idRecord, $table) {
 		$idRecord	= intval($idRecord);
+		$this->table= trim(strtolower($table));
 
 		if( $idRecord > 0 ) {
 			$record		= Todoyu::db()->getRecord($table, $idRecord);
@@ -165,6 +173,36 @@ abstract class TodoyuBaseObject implements ArrayAccess, Dwoo_IDataProvider {
 
 
 	/**
+	 * Update the object and the database
+	 *
+	 * @param	Array	$data
+	 */
+	protected function update(array $data) {
+			// Update database
+		TodoyuRecordManager::updateRecord($this->table, $this->getID(), $data);
+			// Update internal record
+		$this->data = array_merge($this->data, $data);
+			// Remove record query cache
+		TodoyuRecordManager::removeRecordQueryCache($this->table, $this->getID());
+	}
+
+
+
+	/**
+	 * Update a single field
+	 *
+	 * @param	String		$fieldName
+	 * @param	Mixed		$value			Scalar value
+	 */
+	protected function updateField($fieldName, $value) {
+		$this->update(array(
+			$fieldName	=> $value
+		));
+	}
+
+
+
+	/**
 	 * Check whether a property is not empty
 	 *
 	 * @param	String		$key
@@ -178,7 +216,7 @@ abstract class TodoyuBaseObject implements ArrayAccess, Dwoo_IDataProvider {
 
 	/**
 	 * Inject data.
-	 * Usefull if user initialized without an ID to avoid an extra request
+	 * Useful if user initialized without an ID to avoid an extra request
 	 *
 	 * @param	Array	$data
 	 */
