@@ -8,6 +8,7 @@ core 2.1.3 - not released yet
 	* Added: action dispatcher error output contains now also action controller class name
 	* Added: Wrappers for rename() and copy() in TodoyuFileManager
 	* Added: TodoyuTime:: getYearEnd(), getYearStart()
+	* Added: update() and updateField()
 	* Changed: Don't require system locale data to set a locale for translation
 	* Changed: TodoyuDebug handles now debugging status
 	* Removed: Moved continuous integration files to private extension
